# auditreach

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/workflows/: publish-pypi.yml
.well-known/: agent.json
docs/: branch-protection.md  concepts.md  getting-started.md  security-review-2026-07-12.md
docs/integrations/: ci.md
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-search/: search.py
python/examples/02-verify-audit-log/: verify.py
python/examples/03-agent-native-json/: agent_report.py
python/src/auditreach/: __init__.py  cli.py  crypto.py  types.py
python/src/auditreach/audit_log/: chain_verifier.py  hash_chain_writer.py
python/src/auditreach/auth/: credential_store.py
python/src/auditreach/clients/: reddit_client.py  youtube_client.py
python/src/auditreach/commands/: auth.py  mcp.py  search.py  verify_log.py
python/src/auditreach/util/: prompt.py
python/tests/: conftest.py  test_auth_command.py  test_cli.py  test_credential_store.py  test_crypto.py  test_hash_chain.py  test_mcp_command.py  test_reddit_client.py  test_search_command.py  test_verify_log_command.py  test_youtube_client.py
src/: cli.ts  index.ts  types.ts
src/audit-log/: chain-verifier.ts  hash-chain-writer.ts
src/auth/: credential-store.ts
src/clients/: reddit-client.ts  youtube-client.ts
src/commands/: auth.ts  mcp.ts  search.ts  verify-log.ts
src/util/: crypto.ts  prompt.ts
test/: agent-manifest.test.ts  auth-command.test.ts  credential-store.test.ts  crypto.test.ts  hash-chain.test.ts  mcp-command.test.ts  reddit-client.test.ts  search-command.test.ts  verify-log-command.test.ts  youtube-client.test.ts
