[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditreach-cli"
version = "0.1.0"
description = "Official-API-only, BYOK CLI for researching Reddit and YouTube with your own API keys and a tamper-evident, hash-chained audit log."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["cli", "byok", "compliance", "audit-log", "reddit-api", "youtube-api", "ai-agents", "research", "oauth2", "developer-tools", "security", "api-client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "keyring>=24,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/auditreach"
Repository = "https://github.com/RudrenduPaul/auditreach"
"Bug Tracker" = "https://github.com/RudrenduPaul/auditreach/issues"
Changelog = "https://github.com/RudrenduPaul/auditreach/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/auditreach/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
auditreach = "auditreach.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auditreach"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/auditreach",
  "/tests",
  "/examples",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
